Fix rendering issues on workshop and social pages (#77)
This fixes a strange issue only see when the JS is minified for prod and where the user directly navigates to a hash route under the program page/component. Basically the html was not rendering as described in the component, p tags were closing before they should, and other things weren't right. This simply updates the html structure to fix whatever deep underlying issues in either react, the router, or webpack compilation, that might be contributing to the original behavior. Still don't understand why, but we won't look a gifted horse in the mouth on this one.

--- a/src/components/Social/index.module.scss
+++ b/src/components/Social/index.module.scss
@@ -1,29 +1,39 @@
 @import '../../styles/variables.scss';
 
-.socialDescription {
+.social {
   color: $dark-gray;
   font-size: 20px;
   line-height: 1.6;
-  margin: 0 auto 30px;
+  margin: 0 auto;
   text-align: center;
   width: 560px;
 
   @media (max-width: $mobile-width) {
     font-size: 18px;
     line-height: 1.67;
-    margin-bottom: 20px;
     text-align: justify;
     width: 90%;
   }
-}
 
-.primaryImage {
-  display: block;
-  margin: 50px auto;
-  max-width: 545px;
-  width: 100%;
-  border-radius: 10px;
-  @media (max-width: $mobile-width) {
-    margin: 20px auto;
+  & > h1 {
+    text-align: center;
+  }
+
+  p {
+    margin-bottom: 30px;
+    @media (max-width: $mobile-width) {
+      margin-bottom: 20px;
+    }
+  }
+
+  .primaryImage {
+    display: block;
+    margin: 50px auto;
+    max-width: 545px;
+    width: 100%;
+    border-radius: 10px;
+    @media (max-width: $mobile-width) {
+      margin: 20px auto;
+    }
   }
 }
